fix network search scrollbar

--- a/src/app/components/options-bar/options-bar.component.scss
+++ b/src/app/components/options-bar/options-bar.component.scss
@@ -20,6 +20,7 @@
 .network-search-input {
   width: 100%;
   padding: 0.4em 0.5em;
+  box-sizing: border-box;
   border: 1px solid currentColor;
   border-radius: 0.25em;
   background: transparent;
